--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@prisma/client": "5.19.1",
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "@prisma/client": "5.19.1"
+    "resend": "^6.6.0"
   },
   "devDependencies": {
-    "prisma": "5.19.1",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4"
+    "eslint-config-next": "16.0.4",
+    "prisma": "5.19.1"
   }
 }
