--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.948.0",
-    "@prisma/client": "5.19.1",
-    "next": "16.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "resend": "^6.6.0"
-  },
+  "@aws-sdk/client-s3": "^3.948.0",
+  "@prisma/client": "5.19.1",
+  "next": "latest",
+  "react": "19.2.0",
+  "react-dom": "19.2.0",
+  "resend": "^6.6.0"
+},
+
   "devDependencies": {
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
